--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,7 +43,7 @@ stages:
       steps:
       - script: |
           set -e
-          
+
           terraform init -input=false
           terraform apply -input=false -auto-approve
         name: 'RunTerraform'
@@ -53,3 +53,4 @@ stages:
           ARM_CLIENT_SECRET: $(ARM_CLIENT_SECRET)
           ARM_TENANT_ID: $(ARM_TENANT_ID)
           ARM_SUBSCRIPTION_ID: $(ARM_SUBSCRIPTION_ID)
+          TF_VAR_imagebuild: $(tag)
