fix(error) display -> to displayName:

--- a/azure-pipelines/jobs/docker.yaml
+++ b/azure-pipelines/jobs/docker.yaml
@@ -1,6 +1,6 @@
 jobs:
 - job: BuildAndPush 
-  display: Build and Push Image 
+  displayName: Build and Push Image 
   pool: 
     vmImage: unbuntu-latest
   steps:
