--- a/azure-pipelines/jobs/terraform.yaml
+++ b/azure-pipelines/jobs/terraform.yaml
@@ -4,7 +4,7 @@ jobs:
     pool:
       vmImage: 'ubuntu-latest'
     variables: 
-    - groups: '$(tfEnvironmentVariables)'
+    - group: '$(tfEnvironmentVariables)'
     steps: 
     - script: |
         set -e
@@ -12,9 +12,9 @@ jobs:
         terraform apply -input=false -auto-approve
       name: 'RunTerraform'
       displayName: 'Running Terraform'
-        env: 
-          ARM_CLIENT_ID: $(ARM_CLIENT_ID)
-          ARM_CLIENT_SECRET: $(ARM_CLIENT_SECRET)
-          ARM_TENANT_ID: $(ARM_TENANT_ID)
-          ARM_SUBSCRIPTION_ID: $(ARM_SUBSCRIPTION_ID)
-          TF_VAR_imagebuild: $(tag)
+      env: 
+        ARM_CLIENT_ID: $(ARM_CLIENT_ID)
+        ARM_CLIENT_SECRET: $(ARM_CLIENT_SECRET)
+        ARM_TENANT_ID: $(ARM_TENANT_ID)
+        ARM_SUBSCRIPTION_ID: $(ARM_SUBSCRIPTION_ID)
+        TF_VAR_imagebuild: $(tag)
