--- a/azure-pipelines/jobs/terraform.yaml
+++ b/azure-pipelines/jobs/terraform.yaml
@@ -4,7 +4,7 @@ jobs:
     pool:
       vmImage: 'ubuntu-latest'
     variables: 
-    - group: $(tfEnvironmentVariables)
+    - group: $(environmentVariables)
     steps: 
     - script: |
         set -e
