re-spelled ubuntu on docker.yaml

--- a/azure-pipelines/jobs/docker.yaml
+++ b/azure-pipelines/jobs/docker.yaml
@@ -2,7 +2,7 @@ jobs:
 - job: BuildAndPush 
   displayName: Build and Push Image 
   pool: 
-    vmImage: unbuntu-latest
+    vmImage: 'ubuntu-latest'
   steps:
   - task: Docker@2
     inputs:
