changed variable name and keyword was misspelled

--- a/azure-pipelines/jobs/docker.yaml
+++ b/azure-pipelines/jobs/docker.yaml
@@ -6,7 +6,7 @@ jobs:
   steps:
   - task: Docker@2
     inputs:
-      containerReistry: '$(containerRegistry)'
+      containerRegistry: '$(dockerServiceConnect)'
       repository: '$(imageName)'
       command: 'buildAndPush'
       Dockerfile:  '**/Dockerfile'
