--- a/azure-pipelines/vars/global.yaml
+++ b/azure-pipelines/vars/global.yaml
@@ -7,7 +7,7 @@ variables:
 
   # Docker 
   imageName: luisenalvar/weatherapi
-  containerRegistry: DockerHubSerConnect
+  dockerServiceConnect: DockerHubSerConnect
 
   # Terraform 
   environmentVariables: TerraformEnvVars
