--- a/azure-pipelines/vars/global.yaml
+++ b/azure-pipelines/vars/global.yaml
@@ -4,7 +4,14 @@ variables:
   # Deployment Conditions 
   isMain: ${{  eq(variables['Build.SourceBranch'], 'refs/heads/main')  }}
   isProd: ${{  eq(variables['Build.SourceBranch'], 'refs/heads/production')  }}
+  # Zero Trust Principle 
+  isFork:      ${{  eq(variables['System.PullRequest.IsFork'], 'True') }}
+  isPR:        ${{  eq(variables['Build.Reason'], 'PullRequest')  }}
+  isScheduled: ${{  eq(variables['Build.Reason'], 'Schedule')  }}
+  isTrustedCI: ${{  and( eq(variables.isFork, 'False'), eq(variables.isPR, 'False'), eq(variables.isScheduled, 'False'))   }}
+  deployMain:  ${{  and( eq(variables.isMain, 'True'), eq(variables.isTrustedCI, 'True') )  }}
 
+  
   # Docker 
   imageName: luisenalvar/weatherapi
   dockerServiceConnect: DockerHubSerConnect
