changed imagetag to have an underscore

--- a/azure-pipelines/vars/global.yaml
+++ b/azure-pipelines/vars/global.yaml
@@ -16,7 +16,7 @@ variables:
   dockerImageName: luisenalvar/weatherapi
   dockerServiceConnect: DockerHubSerConnect
   ${{ if eq(variables.isTag, 'False')  }}:
-    imagetag: dev-latest
+    imagetag: dev_latest
 
   # Terraform 
   # TerraformVariables: TerraformEnvVars #unable to use this variable on terraform.yaml under group
